# slowlife

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  index.html  local-release  package.json  pnpm-lock.yaml  vitest.config.ts
.github/skills/code-simplifier/: SKILL.md
.github/workflows/: ci.yml  release-macos.yml
src/: App.vue  main.ts
src-sync/: .env.example  Cargo.toml  README.md
src-sync/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs
src-sync/src/routes/: health.rs  mod.rs  pull.rs  push.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src/__mocks__/@tauri-apps/: plugin-sql.ts
src/components/: AppFab.vue  AppSidebar.vue  BaseModal.vue  CommandPalette.vue  FocusModeLauncher.vue  InputDialog.vue  PageHeader.vue  QuickCaptureModal.vue  Select.vue
src/components/assets/: AssetForm.vue  AssetRow.vue
src/components/dashboard/: ActivityHeatmap.vue  FocusRateCard.vue  MoodWeek.vue  NudgeCard.vue  PinnedProjects.vue  RecentAssets.vue  RecentEntries.vue  SignalRow.vue  SubscriptionsCard.vue  TodoFocus.vue  UpcomingEvents.vue
src/components/events/: CalendarMonth.vue  CalendarNav.vue  CalendarWeek.vue  DayDetail.vue  EventForm.vue  EventRow.vue  GoogleCalendarSyncModal.vue  GoogleEventDetail.vue
src/components/finances/: AccountForm.vue  AccountRow.vue  BudgetOverview.vue  ExchangeRateForm.vue  FinanceSummary.vue  IncomeExpenseTrend.vue  NetWorthTrend.vue  SubscriptionForm.vue  (+5 more)
src/composables/: useAssetDialog.ts  useAssets.ts  useCommandPalette.ts  useEventDialog.ts  useEvents.ts  useFinances.ts  useFocusMode.ts  useGoogleCalendarSync.ts  useJournal.ts  useJournalPreviewDialog.ts  useKeyboard.ts  usePinned.ts  useQuickCapture.ts  useSidebar.ts  useSpaces.ts  useTodoDialog.ts  useTodos.ts
src/core/: constants.ts  db.ts  googleAuth.ts  googleCalendarApi.ts  markdown.ts  search.ts  seed.ts  types.ts
src/router/: index.ts
src/styles/: tokens.css
src/views/: DashboardView.vue  EventsView.vue  FinancesView.vue  FocusModeView.vue  JournalView.vue  TodosView.vue
(+21 files in other folders)
