[package]
name = "slowlife-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
