[package]
name = "slowlife"
version = "0.0.5"
description = "slowlife — your pace, your space"
authors = ["addeeandra"]
edition = "2021"

[lib]
name = "slowlife_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"
urlencoding = "2"
